--- a/app/src/main/res/layout/configuration_dialog.xml
+++ b/app/src/main/res/layout/configuration_dialog.xml
@@ -82,7 +82,7 @@
         app:layout_constraintTop_toBottomOf="@id/contenido2"
         app:layout_constraintStart_toStartOf="@id/guideline_center"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         />
 
     <com.google.android.material.button.MaterialButton
@@ -90,10 +90,10 @@
         android:id="@+id/continuar"
         android:layout_height="wrap_content"
         android:text="@string/continuar"
-        app:layout_constraintTop_toBottomOf="@id/contenido1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="220dp"
+        android:layout_marginBottom="110dp"
         android:gravity="center"/>
 
 
