--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
-    android:background="@drawable/imagen_bingo">
+    android:background="@drawable/imagen_bingo2">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/botonInicio"
@@ -13,7 +13,7 @@
         android:textFontWeight="@integer/material_motion_duration_medium_2"
         android:layout_gravity="center"
         android:text="@string/iniciar_nueva_partida"
-        android:layout_marginBottom="130dp"/>
+        android:layout_marginBottom="110dp"/>
 
 
 
