--- a/app/src/main/res/layout/configuration_dialog.xml
+++ b/app/src/main/res/layout/configuration_dialog.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="30dp">
+    >
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -20,13 +20,13 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:id="@+id/dinero"
         android:gravity="center"
         android:src="@drawable/imagen_dinero"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="60dp"
-        />
+        android:layout_marginTop="60dp" />
 
 
     <TextView
@@ -47,7 +47,6 @@
         android:layout_height="wrap_content"
         android:text="@string/precio"
         android:textSize="17sp"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/titulo1"
         app:layout_constraintBottom_toTopOf="@+id/guideline" />
@@ -73,28 +72,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/contenido1"
         app:layout_constraintTop_toBottomOf="@+id/guideline" />
+
     <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="240dp"
+    android:id="@+id/spinner"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:entries="@array/porcentajes"
         app:layout_constraintTop_toBottomOf="@id/contenido2"
-        app:layout_constraintStart_toStartOf="@id/guideline_center"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
         android:layout_marginTop="50dp"
         />
 
+
     <com.google.android.material.button.MaterialButton
-        android:layout_width="wrap_content"
         android:id="@+id/continuar"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/continuar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="110dp"
-        android:gravity="center"/>
+        android:layout_gravity="center"
+        android:text="@string/continuar"
+        android:layout_marginBottom="110dp"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
