--- a/app/src/main/res/layout/bombo.xml
+++ b/app/src/main/res/layout/bombo.xml
@@ -19,16 +19,15 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:gravity="center"
-        android:text="2"
+        android:text=""
         android:alpha="1"
         android:textSize="83sp"
-        android:visibility="invisible"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/fonfo_bola" />
+        android:background="@drawable/fondo_bola" />
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
