--- a/app/src/main/res/layout/bombo.xml
+++ b/app/src/main/res/layout/bombo.xml
@@ -31,6 +31,7 @@
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/design_default_color_on_primary"
         android:id="@+id/manual_automatico"
         android:layout_marginStart="20dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:id="@+id/boton_nueva_partida"
+        android:textColor="@color/design_default_color_on_primary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:text="@string/nueva_partida1"
@@ -53,11 +55,12 @@
     <TextView
         android:id="@+id/Línia"
         style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:textColor="#CB6CE6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-       app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/guia_Horizontal"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:text = "@string/linia"
         android:textSize="20sp" />
     <com.google.android.material.button.MaterialButton
@@ -65,6 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/guia_Horizontal"
+        android:textColor="@color/design_default_color_on_primary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:text = "@string/nueva_bola"
@@ -82,6 +86,7 @@
         android:id="@+id/bingo"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="0dp"
+        android:textColor="#CB6CE6"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         app:layout_constraintBottom_toTopOf="@+id/guia_Horizontal"
