--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -20,6 +20,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_gravity="center"
         android:text="@string/iniciar_nueva_partida"
+        android:textColor="@color/design_default_color_on_primary"
+        android:contentDescription="@string/description_imagen_fondo"
         android:layout_marginBottom="80dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
